Fix bug that caused long lines to be clipped

--- a/style.sass
+++ b/style.sass
@@ -218,6 +218,9 @@ button
 
 
 body[Type="man"]
+  .Main
+    margin-left:         80px    
+
   .PageTitle
     font-family:         $TitleFont
     font-size:           32px
@@ -228,10 +231,6 @@ body[Type="man"]
     margin-top:          60px
     margin-bottom:       55px
     text-decoration:     underline dotted  
-
-  .Main
-    margin:              auto
-    width:               680px
   
   .Prologue
     margin-bottom:       35px    
@@ -260,7 +259,7 @@ body[Type="man"]
     font-weight:      normal
     color:            #ffffff
     background:       #667292
-    width:            100%
+    width:            680px
     height:           30px
     line-height:      30px
     padding-left:     18px
